@@ -3301,28 +3301,8 @@ else if (matchDomain('dallasnews.com')) {
 }
 
 else if (matchDomain('defector.com')) {
-  let paywall = document.querySelector('[class^="ContentGate_wrapper__"]');
-  if (paywall && dompurify_loaded) {
-    removeDOMElement(paywall);
-    let url = window.location.href;
-    try {
-      fetch(url)
-      .then(response => {
-        if (response.ok) {
-          response.text().then(html => {
-            let parser = new DOMParser();
-            let doc = parser.parseFromString(html, 'text/html');
-            let article_new = doc.querySelector('div[class^="PostContent_wrapper__"]');
-            let article = document.querySelector('div[class^="PostContent_wrapper__"]');
-            if (article && article_new)
-              article.parentNode.replaceChild(DOMPurify.sanitize(article_new), article);
-          });
-        }
-      });
-    } catch (err) {
-      console.log(err);
-    }
-  }
+  let paywall = document.querySelector('div[class^="ContentGate_wrapper__"]');
+  removeDOMElement(paywall);
 }
 
 else if (matchDomain('digiday.com')) {
