@@ -738,5 +738,5 @@
     "*://*.wallkit.net/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.1.9.4"
+  "version": "3.1.9.5"
 }
