@@ -5,6 +5,7 @@ Post-release
 Add GauchaZH
 Add VmnMedia.nl Group (opt-in to custom sites)
 Remove Weltkunst.de (fix obsolete)
+Fix Defector (cookie)
 Fix The Athletic (Kiwi)
 Fix TheTimes.co.uk (overlay)
 Fix TownNews sites (encrypted)
